# copier-python-project

./: CHANGELOG.md  Containerfile  LICENSE  README.md  cookiecutter.json  copier.yaml
.github/workflows/: python_code_quality.yml  release-please.yml
project/: .dockerignore.jinja  .pre-commit-config.yaml  AGENTS.md  Containerfile.jinja  LICENSE.jinja  README.md.jinja  pyproject.toml.jinja  {% if use_containers %}Containerfile{% endif %}.jinja
project/.devcontainer/: Containerfile  devcontainer.json.jinja
project/.github/: CODEOWNERS.jinja
project/.github/workflows/: container-build-pr.yml.jinja  container-build-push.yml.jinja  docker-build-action.yml  python_build_package.yml.jinja  {% if use_containers %}container-build-pr.yml{% endif %}.jinja  {% if use_containers %}container-build-push.yml{% endif %}.jinja
project/src/{{ python_package_import_name }}/: __init__.py.jinja
tests/: test_template.py
{{ cookiecutter.project_name_devops }}/: .pre-commit-config.yaml  README.md  pyproject.toml
{{ cookiecutter.project_name_devops }}/.devcontainer/: devcontainer.json
