[tool.poetry]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
authors = ["{{ cookiecutter.author_full_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"
license = "MIT"
include = ["src"]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.11"
mypy = "^1.8.0"
pytest = "^7.4.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
plugins= "pydantic.mypy"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
ignore = ["E203"]
